--- a/_resource/overrides/main.html
+++ b/_resource/overrides/main.html
@@ -47,6 +47,9 @@
                                   <div class="md-sidebar__inner">
                                     {% include "partials/toc.html" %}
                                   </div>
+                                  <div class="md-sidebar__inner">
+                                    {% include "partials/banner.html" %}
+                                  </div>
                                 </div>
                               </div>
                             {% endif %}
